--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
       </div>
       <section class="container my-4">
         <div class="row row-cols-lg-2 row-cols-md-1">
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-1.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -179,11 +179,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-2.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-2.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -196,11 +196,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-3.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-3.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -213,11 +213,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px" >
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-4.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-4.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -230,11 +230,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-5.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-5.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
@@ -247,11 +247,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-12" style="max-width:648px">
             <div class="card mb-3">
               <div class="row row-cols-2 g-0">
                 <div class="col-md-4 col-12">
-                  <img src="images/course/course-6.png" class="img-fluid w-100 rounded-start" alt="">
+                  <img src="images/course/course-6.png" class="img-fluid h-100 d-inline-block w-100 rounded-start" alt="">
                 </div>
                 <div class="col-md-8 col-12">
                   <div class="card-body d-flex flex-column align-items-start p-4">
